lol that's not how CSS works

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <style>
-font-size:100;
-font-family: helvetica;
-text-align: center;
+body {
+	font-size:100;
+	font-family: helvetica;
+	text-align: center;
+}
 </style>
 yes
